add header component

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,9 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title></title>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-    </head>
-    <body>
-        <div id="content"></div>
-        <script src="bundle.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Favourite contacts</title>
+  </head>
+  <body>
+  <div id="root"></div><script type="text/javascript" src="C:\Users\hegyitaho\Documents\hearsay-budapestsitesdev-takehome-master\public/bundle.js"></script></body>
 </html>
